# certificado-verde-blockchain

./: .gitignore  README.md  docker-compose.yml
backend/: .env_example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 745091662d3a_create_initial_tables_and_their_history_.py
backend/examples/: package-lock.json  package.json  sign_certificate.js
backend/src/certificado_verde_blockchain/: dependencies.py  main.py
backend/src/certificado_verde_blockchain/auditors_and_certifiers/: __init__.py
backend/src/certificado_verde_blockchain/auditors_and_certifiers/application/: __init__.py  find_auditor_by_id.py  find_certifier_by_id.py  list_all_auditors.py  list_all_certifiers.py  register_auditor.py  register_certifier.py
backend/src/certificado_verde_blockchain/auditors_and_certifiers/domain/: __init__.py  auditor.py  certifier.py  i_auditor_repository.py  i_certifier_repository.py
backend/src/certificado_verde_blockchain/auditors_and_certifiers/infrastructure/: __init__.py  dependencies.py
backend/src/certificado_verde_blockchain/auditors_and_certifiers/infrastructure/http/: __init__.py  auditors_and_certifiers_controller.py  auditors_and_certifiers_routes.py
backend/src/certificado_verde_blockchain/certificates/: __init__.py
backend/src/certificado_verde_blockchain/certificates/application/: __init__.py  find_certificate_by_id.py  find_qr_code_by_key.py  issue_certificate.py  list_pre_certificates.py  register_pdf_hash.py  register_pre_certificate.py  validate_certificate.py  validate_pdf_file.py
backend/src/certificado_verde_blockchain/certificates/domain/: __init__.py  authenticity_proof.py  canonical_certificate.py  canonical_certificate_service.py  canonical_certifier.py  canonical_producer.py  canonical_product.py  certificate.py  i_blockchain_service.py  i_certificate_repository.py  i_certifier_service.py  i_file_service.py  i_producer_service.py  i_product_service.py  i_qr_code_service.py  i_serial_code_service.py  i_storage_service.py  norm.py  sustainability_criteria.py
backend/src/certificado_verde_blockchain/certificates/infrastructure/: __init__.py  dependencies.py  serial_code_service.py  web3_blockchain_service.py
backend/src/certificado_verde_blockchain/configuration/: __init__.py  app_config.py  base.py  blockchain_config.py  database_config.py  qr_code_config.py  storage_config.py
backend/src/certificado_verde_blockchain/producers/: __init__.py
backend/src/certificado_verde_blockchain/producers/application/: __init__.py  find_producer_by_id.py  list_all_producers.py  register_producer.py
backend/src/certificado_verde_blockchain/producers/domain/: __init__.py  i_producer_repository.py  producer.py
backend/src/certificado_verde_blockchain/producers/infrastructure/: __init__.py  dependencies.py
backend/src/certificado_verde_blockchain/products/: __init__.py
backend/src/certificado_verde_blockchain/products/application/: __init__.py  find_product_by_id.py  list_all_products.py  register_product.py
backend/src/certificado_verde_blockchain/products/domain/: __init__.py  i_product_repository.py  measurement_unit.py  product.py  product_category.py  quantity.py
backend/src/certificado_verde_blockchain/products/infrastructure/: __init__.py  dependencies.py
backend/src/certificado_verde_blockchain/shared/enums/: document_type.py
backend/src/certificado_verde_blockchain/shared/errors/: __init__.py  base.py
backend/src/certificado_verde_blockchain/shared/middlewares/: __init__.py  error_middleware.py  logging_middleware.py
backend/src/certificado_verde_blockchain/shared/models/: __init__.py  contact_info.py  coordinates.py  document.py  location.py
blockchain/: .gitignore  Dockerfile  README.md  (+3 more)
(+97 files in other folders)
